[tool.poetry]
name = "learning-github-actions2"
version = "0.1.0"
description = ""
authors = ["kobi <kobimic@gmail.com>"]
readme = "README.md"
packages = [{include = "my_package"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
